flask-deployment/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  selector:
    app: devops
    framework: flask
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
